# ai-job-apply

./: .env.example.logging  .gitignore  .pre-commit-config.yaml  AGENTS.md  E2E_TESTING_GUIDE.md  Makefile  README.md  ai-todo.md  docker-compose.prod.yml  docker-compose.yml  openapi.json  package-lock.json  package.json  start-dev.sh  stop-dev.sh  test-direct-pdf-upload.py  test-pdf-upload-direct.py  test-simple-register.py
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  TODO.md  config.env.example  debug_imports.py  main.py  pyproject.toml  requirements.txt  seed-default-user.py  seed-mock-resume.py  setup-database.py  setup-production.py  start.sh  test-direct-pdf-upload.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_failure_logs.py  0fb9d7724c92_add_session_cookies.py  3842c06f2231_initial_migration.py  47efb524293a_add_password_reset_token_to_users.py  4c0fcbbc115f_merge_branches.py  876db55b7ff1_add_user_id_to_resumes.py  a93b29c8e1e1_add_user_relationships.py  b12345678901_add_password_history.py  b577e6a51f46_add_users_and_sessions.py  c12345678901_add_analytics_indexes.py  c939700876c3_add_rate_limits_table.py  d12345678901_add_analytics_functions.py  e12345678901_add_analytics_mvs.py
backend/config/: application_form_fields.yaml
backend/scripts/: backup_database.py  check_coverage.py  seed_default_configs.py
backend/src/: __init__.py  config.py
backend/src/api/: __init__.py  app.py  dependencies.py
backend/src/core/: AGENTS.md  __init__.py  account_service.py  ai_provider.py  ai_service.py  application_service.py  auth_service.py  cache.py  cache_performance.py  cover_letter_service.py  export_service.py  file_service.py  interview_service.py  job_application.py  job_search.py  monitoring_service.py  resume_service.py  security.py  write_through_cache.py
backend/src/database/: __init__.py  config.py  models.py  models.py.bak2
backend/src/middleware/: csrf.py  metrics_middleware.py  query_performance.py  rate_limit.py  rate_limiter.py  response_middleware.py  security.py  security_headers.py  security_logging.py
backend/src/models/: AGENTS.md  __init__.py  ai_config.py  application.py  automation.py  career_insights.py  cover_letter.py  failure_log.py  job.py  password_history.py  push_subscription.py  resume.py  user.py
backend/src/services/: AGENTS.md  __init__.py  account_service.py  ai_provider_manager.py  (+42 more)
backend/tests/: __init__.py  conftest.py  test_auth.test.py  test_email_templates.py  test_jwt_security.py  test_mailgun_client.py  test_notification_integration.py  test_notifications.py  test_push_service.py
(+564 files in other folders)
